# kargo-ai-engineer-case-study

./: .gitignore  HANDOFF.md  README.md  app.py  campaign_history.csv  client_briefs.json  inventory_forecaster.csv  presentation.html  product_catalog.csv  pyproject.toml
src/kargo_media_recommender/: __init__.py  benchmarks.py  clarification.py  data.py  display.py  formatting.py  llm_parser.py  recommender.py  schemas.py  ui_helpers.py  workflow.py
tests/: test_benchmarks.py  test_data_loading.py  test_display.py  test_live_openai_integration.py  test_llm_parser.py  test_recommender.py  test_synthetic_brief_scenarios.py  test_ui_helpers.py  test_workflow.py
